k3s/apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homelab
  labels:
    app: homer
spec:
  type: ClusterIP
  selector:
    app: homer
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
